[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "splitters"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
# extension-module disables linking,
# therefore, running Python code in Rust, fails to compile
#features = ["pyo3/extension-module"]
features = ["pyo3/auto-initialize"]
bindings = "bin"
#data = "./data"
