[package]
name = "splitters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "splitters"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.3"
srx = { version = "0.1", features = ["from_xml"] }
clap = { version = "3.1.18", features = ["derive"] }

[profile.release]
lto = "thin"
